--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -1,7 +1,20 @@
-//home 
 @mixin sizes ($width, $height) {
   width: $width;
   height: $height;
+}
+
+@mixin margin ($top, $right, $left, $button) {
+  margin-top: $top;
+  margin-right: $right;
+  margin-bottom: $button;
+  margin-left: $left;
+}
+
+@mixin padding ($top, $right, $button, $left) {
+  padding-top: $top;
+  padding-right: $right;
+  padding-bottom: $button;
+  padding-left: $left
 }
 
 @mixin flexbox ($display, $justify, $align) {
