--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,7 +1,9 @@
 //Colors 
 $LightSlateGray:  #778899;
+$lightgray: #888686;
 $DarkSlateGray:  #2F4F4F;
 $black:  #000000;
+$blackShadow: #0003;
 $Gainsboro:  #DCDCDC;
 $white:  #ffffff;
 $DarkRed:	#8B0000;
@@ -13,6 +15,17 @@ $Teal:	#008080;
 $DeepSkyBlue:	#00BFFF;
 $Maroon:	#800000;
 $DarkGoldenrod:	#B8860B;
+$redSolid: #FF0000;
+$SanMarino: #4267b2;
+$Cerulean: #00aced;
+$whiteShadow: #e0e5ec;
+$gray: #797d7f;
+$grayShadow: #a1a1a1;
+$blueShadow: #5c87fe;
+$moonMist:#FFF9;
+$pink:#7d43a1;
+
+$sombrasfirst: rgb(163, 177, 198);
 
 //globals
 $mpadding: 15px;
